# name_app

./: Cargo.toml
src/: main.rs
static/: index.html
